[gd_scene load_steps=19 format=4 uid="uid://ti35e4tpy6hx"]

[ext_resource type="Texture2D" uid="uid://b6ngrnol8f3vu" path="res://Textures/Fruits/Nommie/Nommie.png" id="1_lbt5m"]
[ext_resource type="Script" path="res://Scripts/Farmland/Fruits/NommieGrowingFruit.gd" id="1_wdsrn"]
[ext_resource type="Shader" path="res://Shader/Outline.gdshader" id="2_bd17p"]
[ext_resource type="Script" path="res://Scripts/Farmland/Events/NommieFertilize/NommiePotion.gd" id="4_cj6x0"]
[ext_resource type="Script" path="res://Scripts/Farmland/Events/NommieWatering/NommieWatering.gd" id="5_saklj"]
[ext_resource type="Script" path="res://Scripts/Farmland/Events/NommieFeeding/NommieFeeding.gd" id="6_3u6u3"]

[sub_resource type="ArrayMesh" id="ArrayMesh_scq2f"]
_surfaces = [{
"aabb": AABB(-0.0684048, -0.0562563, -0.0143627, 0.134182, 0.127173, 0.107414),
"attribute_data": PackedByteArray("kP8PP7D/Lz+Y/xc/t/82P5T/Ez+6/zk/kP8PP7D/Lz+U/xM/sP8vP5j/Fz+6/zk/lP8TP7D/Lz+U/xM/sP8vP5D/Dz+w/y8/lP8TP7D/Lz+Q/w8/sP8vP5T/Ez+y/zE/kP8PP7D/Lz+U/xM/uv85P5D/Dz+6/zk/kP8PP7r/OT+U/xM/sP8vP5T/Ez+6/zk/lP8TP7r/OT+Q/w8/uv85P5D/Dz+6/zk/kP8PP7r/OT+U/xM/uv85P5T/Ez+6/zk/lP8TP7D/Lz+U/xM/sP8vP5j/Fz+w/y8/mP8XP7D/Lz+Y/xc/sP8vP5T/Ez+w/y8/lP8TP7D/Lz+Y/xc/sP8vP5T/Ez+x/zA/mP8XP7D/Lz+U/xM/sP8vP5j/Fz+x/zA/lP8TP7f/Nj+Y/xc/uv85P5T/Ez+6/zk/mP8XP7r/OT+U/xM/uv85P5T/Ez+6/zk/lP8TP7r/OT+Q/w8/sP8vP5T/Ez+w/y8/mP8XP7r/OT+Y/xc/uv85P5D/Dz+y/zE/sP8vP7D/Lz+w/y8/sP8vP7D/Lz+w/y8/oP8fP7D/Lz+w/y8/oP8fP+D/Xz+w/y8/wP8/P7D/Lz/A/z8/sP8vP8D/Pz+w/y8/wP8/P6D/Hz/Q/08/sP8vP9D/Tz+w/y8/ov8hP8D/Pz+z/zI/uv85P7T/Mz+5/zg/rv8tP8D/Pz+z/zI/uv85P7T/Mz+6/zk/rv8tP8D/Pz+i/yE/wP8/P6L/IT/A/z8/rv8tP8D/Pz+z/zI/uf84P7T/Mz+6/zk/rv8tP8D/Pz+0/zM/uf84P7T/Mz+6/zk/ov8hP8D/Pz+g/x8/uv85P7P/Mj+5/zg/s/8yP7n/OD/g/18/uf84P7D/Lz+6/zk/sP8vP7r/OT+z/zI/uf84P7T/Mz+5/zg/s/8yP7r/OT+z/zI/uv85P9D/Tz+5/zg/0P9PP7r/OT/A/z8/uv85P7T/Mz+5/zg/tP8zP7r/OT/A/z8/uv85P6L/IT+9/zw/sv8xP7r/OT+u/y0/vf88P7H/MD+6/zk/rv8tP73/PD+i/yE/vf88P6L/IT+9/zw/rv8tP73/PD+y/zE/uf84P67/LT+9/zw/sf8wP7n/OD+i/yE/vf88P5j/Fz+6/zk/lP8TP7D/Lz+Q/w8/sP8vP5T/Ez+6/zk/mP8XP7f/Nj+Q/w8/sP8vP5D/Dz+w/y8/lP8TP7D/Lz+U/xM/sP8vP5T/Ez+y/zE/kP8PP7D/Lz+U/xM/sP8vP5D/Dz+6/zk/kP8PP7D/Lz+U/xM/uv85P5T/Ez+6/zk/lP8TP7D/Lz+Q/w8/uv85P5D/Dz+6/zk/kP8PP7r/OT+U/xM/uv85P5T/Ez+6/zk/lP8TP7r/OT+Q/w8/uv85P5j/Fz+w/y8/lP8TP7D/Lz+U/xM/sP8vP5T/Ez+w/y8/mP8XP7D/Lz+Y/xc/sP8vP5T/Ez+x/zA/mP8XP7D/Lz+U/xM/sP8vP5T/Ez+w/y8/mP8XP7H/MD+Y/xc/sP8vP5T/Ez+6/zk/mP8XP7r/OT+U/xM/t/82P5T/Ez+6/zk/lP8TP7r/OT+Y/xc/uv85P5D/Dz+y/zE/mP8XP7r/OT+Y/xc/uv85P5T/Ez+w/y8/kP8PP7D/Lz+U/xM/uv85Pw=="),
"format": 34359742487,
"index_count": 228,
"index_data": PackedByteArray("EQAOAAgAEQAIAAQADQAUAAoADQAKAAYAEgAVACsAEgArAAkAFgAPAAAAFgAAACwACwAvAAMACwADAAcAFwATAAwAFwAMABAABQAmAB0ABQAdABoAJQApACIAJQAiABsAJwAqAB4AJwAeACEALgACABgALgAYAB8AIwAgABkAIwAZABwALQAoACQALQAkAAEAUAAwADMAUAAzAEwATwA1ADoATwA6AFYAVwA7ADgAVwA4AFsAWAA2ADEAWAAxAFEAOQA0ADIAOQAyADcARABIAGUARABlAGIAPQBBAFMAPQBTAE0ARwA+AE4ARwBOAFQASQBGAFUASQBVAFoAQABKAFkAQABZAFIAZgBfAF0AZgBdAGQAQwA/AF4AQwBeAGEASwBCAGAASwBgAGcAPABFAGMAPABjAFwAdwBpAG4AdwBuAHQAdgBwAHIAdgByAHsAfABzAJYAfACWAH8AfgCVAG0AfgBtAHkAcQBvAGoAcQBqAJIAfQB4AHUAfQB1AHoAaACAAIMAaACDAIwAjQCEAIkAjQCJAI8AkQCLAIgAkQCIAJcAkwCHAIIAkwCCAGsAigCFAIEAigCBAIYAlABsAI4AlACOAJAA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 152,
"vertex_data": PackedByteArray("AvwsvcyDSz3Fg5I9AvwsvcyDSz3Fg5I9AvwsvcyDSz3Fg5I9AvwsvcyDSz3Fg5I9AvwsvcyDSz3Fg5I9AvwsvcyDSz3Fg5I92s8wvZNGTz03kxg92s8wvZNGTz03kxg92s8wvZNGTz03kxg9lnCJvdZITz1XIhg9lnCJvdZITz1XIhg9lnCJvdZITz1XIhg9RPkrvSr/Z7wXkhg9RPkrvSr/Z7wXkhg9RPkrvSr/Z7wXkhg9BPcrvan6Z7zet5A9BPcrvan6Z7zet5A9BPcrvan6Z7zet5A90xeMvV3+Z7xKkhg90xeMvV3+Z7xKkhg90xeMvV3+Z7xKkhg90xeMvV3+Z7xVuJA90xeMvV3+Z7xVuJA90xeMvV3+Z7xVuJA9i9kuvY08kT214Mo8i9kuvY08kT214Mo8i9kuvY08kT214Mo87NEuvetMOj30clM87NEuvetMOj30clM87NEuvetMOj30clM8OWGKvT45kT3W2so8OWGKvT45kT3W2so8OWGKvT45kT3W2so8OWGKvd1MOj1WclM8OWGKvd1MOj1WclM8OWGKvd1MOj1WclM869MuvSQrwjwKMHQ969MuvSQrwjwKMHQ969MuvSQrwjwKMHQ9GlKKverZwTx/+XM9GlKKverZwTx/+XM9GlKKverZwTx/+XM97liLvQSfSz1bKpI97liLvQSfSz1bKpI97liLvQSfSz1bKpI97liLvQSfSz1bKpI97liLvQSfSz1bKpI97liLvQSfSz1bKpI9JOJFvYb2eLy2kb49JOJFvYb2eLy2kb49JOJFvYb2eLy2kb49JOJFvRgNUz1twt88JOJFvRgNUz1twt88JOJFvRgNUz1twt88csQ5PYb2eLy2kb49csQ5PYb2eLy2kb49csQ5PYb2eLy2kb49csQ5PRgNUz1twt88csQ5PRgNUz1twt88csQ5PRgNUz1twt88A3b8vHDebbya7Sc8A3b8vHDebbya7Sc8A3b8vHDebbya7Sc8A3b8vHDebbya7Sc8A3b8vL1kM73pIiA9A3b8vL1kM73pIiA9A3b8vL1kM73pIiA9A3b8vL1kM73pIiA9szrkPIzebbxE7Sc8szrkPIzebbxE7Sc8szrkPIzebbxE7Sc8szrkPIzebbxE7Sc8+TrkPPFkM73JIiA9+TrkPPFkM73JIiA9+TrkPPFkM73JIiA9+TrkPPFkM73JIiA9SuJFvchuKzwIUWu8SuJFvchuKzwIUWu8SuJFvchuKzwIUWu8SuJFvchuKzwIUWu8bOJFvfVsZr1jbFI9bOJFvfVsZr1jbFI9bOJFvfVsZr1jbFI9bOJFvfVsZr1jbFI9csQ5Pf5uKzxzUWu8csQ5Pf5uKzxzUWu8csQ5Pf5uKzxzUWu8csQ5Pf5uKzxzUWu8vcQ5PfRsZr17bFI9vcQ5PfRsZr17bFI9vcQ5PfRsZr17bFI9vcQ5PfRsZr17bFI9A3b8vK72Drswiro8A3b8vK72Drswiro8A3b8vK72Drswiro8A3b8vIvcAL2bbFM9A3b8vIvcAL2bbFM9A3b8vIvcAL2bbFM9nzrkPK72Drswiro8nzrkPK72Drswiro8nzrkPK72Drswiro8nzrkPIvcAL2bbFM9nzrkPIvcAL2bbFM9nzrkPIvcAL2bbFM9bSkiPXuESz24g5I9bSkiPXuESz24g5I9bSkiPXuESz24g5I9bSkiPXuESz24g5I9bSkiPXuESz24g5I9bSkiPXuESz24g5I9WP4lPUxHTz1+khg9WP4lPUxHTz1+khg9WP4lPUxHTz1+khg9+QeEPbJITz3LIxg9+QeEPbJITz3LIxg9+QeEPbJITz3LIxg9UiYhPSr/Z7wXkhg9UiYhPSr/Z7wXkhg9UiYhPSr/Z7wXkhg9giUhPYr9Z7w6uJA9giUhPYr9Z7w6uJA9giUhPYr9Z7w6uJA9D52GPUhsZ7xrShg9D52GPUhsZ7xrShg9D52GPUhsZ7xrShg9ULaGPYriZ7zatJA9ULaGPYriZ7zatJA9ULaGPYriZ7zatJA91AEkPfk6kT0I48o81AEkPfk6kT0I48o81AEkPfk6kT0I48o8O/4jPRlNOj3wdFM8O/4jPRlNOj3wdFM8O/4jPRlNOj3wdFM8WfiEPdk4kT1q28o8WfiEPdk4kT1q28o8WfiEPdk4kT1q28o8wPeEPd1MOj1WclM8wPeEPd1MOj1WclM8wPeEPd1MOj1WclM8AhQkPWIJwjzDKHQ9AhQkPWIJwjzDKHQ9AhQkPWIJwjzDKHQ9wPeEPV8swjwXLnQ9wPeEPV8swjwXLnQ9wPeEPV8swjwXLnQ9OvSFPeOXSz3VKJI9OvSFPeOXSz3VKJI9OvSFPeOXSz3VKJI9OvSFPeOXSz3VKJI9OvSFPeOXSz3VKJI9OvSFPeOXSz3VKJI9jX8BgBkARMCtfy1X7IKI6uJ/S9c4AIXAE4Dx/wUAoILH/t6DrIL/v6D++Hx6gevqAAAAAP///r8YgO7/9v9QgMj+2oOqgv6/bgHCg/v/LYEAAAAA///+vxWA7//4/1GCAIABAAGA/78AAAAA///+v8P+4YOsggHAjX8BgAAAxr8AgAEAAYD/v8H+4YOqggLAbgHCg/v/LYEAgAEAAYD/vwAAAAD///6/bgHCg/v/LYGMfyaAAADFvwCAAQABgP+/5H9c1AcA2r9I1/7/R1cAgKD++Hx6gRTrs6gAAP3//79I1/7/R1cAgKH++3x4gSTrWwH4fLWpvIDgf3zWJADkv0jX/v9HVwCAWwH4fLWpvICzqAAA/f//v0jX/v9HVwCArn8sV9l/e+uzqAAA/f//v6D++Hx6gfvqWwH4fLWpvICsfytXGX2M6rOoAAD9//+/XQH1fLmpvYBuAcKD+/8tgY1/AYASAEHArX8sV02Abevjf1PXIQBhwByA7v8LAM6AAQD9fwCAwp//f4c//v//v/9/hL/+//+/AQD9fwCAwp//f4S//v//v3lA/v8BAP6//3+HP/7//7//f4S//v//v/v/AYB5QP7//3+Ev/7//795QP7/AQD+v/v/AYB5QP7//3+HP/7//7+FPwEAAYDCn4U/AAA5nN6m+/8BgHlA/v94wAAA/f//v4U/AQABgMKfeUD+/wEA/r/7/wGAeUD+/wEA/X8AgMKf/3+HP/7//7+FPwEAAYDCn4U/AADObJekAQD9fwCAwp+FPwEAAYDCn3jAAAD9//+/eUD+/wEA/r8BAP1/AIDCn4U/AQABgMKfhT8BAIWM6qJ5QP7/AQD+vwEA/X8AgMKf/3+HP/7//794wAAA/f//v4U/AQABgMKfhj8AAMhj3aaFPwEAAYDCn3lA/v8BAP6/+/8BgHlA/v//f4c//v//v3jAAAD9//+/hT8BAAGAwp/7/wGAeUD+//9/hz/+//+/esABAIW//v/7/wGAeUD+/3rAAQCFv/7/eUD+/wEA/r/7/wGAeUD+/wEA/X8AgMKf/3+HP/7//796wAEAhb/+/wEA/X8AgMKfesABAIW//v95QP7/AQD+v1oB9nyFfuvqPgHkg1N9/L/uf/T/+f+fghyAQNfH/4TAVIAuVxJ9iepvgCWA6P9CwD0B44NTffu/7X/z/wYAUYD+/wAAAAD/v+1/8/8GAFKC/v8AAAAA/7+X/rqDCAAsgT4B5INTff+/AIABAAGA/7/+/wAAAAD/vz4B5INTfQHAAIABAAGA/79ugCWA+/84wACAAQABgP+//v8AAAAA/7+X/rqDBAAsgQCAAQABgP+/boAlgP//NsCX/rqDBAAsgVsB9nyFfhTrSNf+/0dXAIAcgD7X9P/Xv1oB+HyGfiPrtKgAAAAA/79I1/7/R1cAgEjX/v9HVwCAHYA+19v/5L+i/vh8SVa8gLSoAAAAAP+/SNf+/0dXAICi/vh8SVa8gFsB9nyEfvvqtKgAAAAA/79UgC1XKIB667SoAAAAAP+/U4AsV+iCi+ql/vp8SFa7gOx/8//4/86AHYA/19//YMBUgC1XtH9u63CAJoDu/z/Al/66gwgALIGm/vh8Rla7gA==")
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m1uq8"]
render_priority = 0
shader = ExtResource("2_bd17p")
shader_parameter/base_color = Color(1, 1, 1, 1)
shader_parameter/color_difference = 0.4
shader_parameter/speed = 4.0
shader_parameter/UV_multiplier = 1.0
shader_parameter/UV_offset = Vector2(0, 0)

[sub_resource type="ArrayMesh" id="ArrayMesh_2sky5"]
_surfaces = [{
"aabb": AABB(-0.0482969, -0.038043, -0.0175352, 0.0936641, 0.0409396, 0.0936641),
"attribute_data": PackedByteArray("sP8vP8D/Pz+x/zA/uf84P7P/Mj+5/zg/oP8fP8D/Pz+w/y8/wP8/P7H/MD+5/zg/s/8yP7n/OD+w/y8/wP8/P7D/Lz/A/z8/oP8fP8D/Pz+x/zA/uf84P7P/Mj+5/zg/oP8fP8D/Pz/A/z8/wP8/P7H/MD+5/zg/s/8yP7n/OD+g/x8/wP8/P8D/Pz/g/18/4P9fP8D/Pz+w/y8/wP8/P7D/Lz/g/18/sP8vP8D/Pz/A/z8/0P9PP9D/Tz/A/z8/0P9PP8D/Pz+w/y8/0P9PP8D/Pz/A/z8/wP8/P8D/Pz+w/y8/uv85P7D/Lz+6/zk/sf8wP7v/Oj+z/zI/u/86P6D/Hz+6/zk/4P9fP7r/OT+x/zA/u/86P7P/Mj+7/zo/0P9PP7r/OT+x/zA/u/86P7P/Mj+7/zo/0P9PP7r/OT/A/z8/uv85P7H/MD+7/zo/s/8yP7v/Oj/A/z8/uv85P7D/Lz/E/0M/sv8xP9D/Tz+g/x8/xP9DP7D/Lz/E/0M/sv8xP8T/Qz+w/y8/xP9DP6D/Hz/E/0M/wP8/P8T/Qz++/z0/xP9DP7D/Lz/E/0M/oP8fP8T/Qz++/z0/0P9PPw=="),
"format": 34359742487,
"index_count": 84,
"index_data": PackedByteArray("EwAcACAAEwAgABAAEgAhACQAEgAkABcAGAAnACsAGAArABsAGgAoAB0AGgAdABUAAAAJADYAAAA2ACwAGQAUABEAGQARABYAAgAFACIAAgAiAB8ABgAOACUABgAlACMADwAKACkADwApACYACwABAB4ACwAeACoANAAwAC0ANAAtADcADQAEAC8ADQAvADMACAAMADIACAAyADUABwADAC4ABwAuADEA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 56,
"vertex_data": PackedByteArray("C1r8vFYsPTsGLXA9C1r8vFYsPTsGLXA9C1r8vFYsPTsGLXA9C1r8vFYsPTsGLXA9C1r8vFYsPTv1pY88C1r8vFYsPTv1pY88C1r8vFYsPTv1pY88C1r8vFYsPTv1pY88Bi0KPVYsPTsGLXA9Bi0KPVYsPTsGLXA9Bi0KPVYsPTsGLXA9Bi0KPVYsPTsGLXA9Bi0KPVYsPTv1pY88Bi0KPVYsPTv1pY88Bi0KPVYsPTv1pY88Bi0KPVYsPTv1pY88+tJFvfvSG731pY+8+tJFvfvSG731pY+8+tJFvfvSG731pY+8+tJFvfvSG7196Zs9+tJFvfvSG7196Zs9+tJFvfvSG7196Zs9+tI5PfvSG731pY+8+tI5PfvSG731pY+8+tI5PfvSG731pY+8+tI5PfvSG7196Zs9+tI5PfvSG7196Zs9+tI5PfvSG7196Zs9+tJFvVYsPTt96Zs9+tJFvVYsPTt96Zs9+tJFvVYsPTt96Zs9+tJFvVYsPTt96Zs9+tJFvVYsPTv1pY+8+tJFvVYsPTv1pY+8+tJFvVYsPTv1pY+8+tJFvVYsPTv1pY+8+tI5PVYsPTv1pY+8+tI5PVYsPTv1pY+8+tI5PVYsPTv1pY+8+tI5PVYsPTv1pY+8+tI5PVYsPTt96Zs9+tI5PVYsPTt96Zs9+tI5PVYsPTt96Zs9+tI5PVYsPTt96Zs9C1r8vO9aqLwGLXA9C1r8vO9aqLwGLXA9C1r8vO9aqLwGLXA9C1r8vO9aqLz1pY88C1r8vO9aqLz1pY88C1r8vO9aqLz1pY88Bi0KPe9aqLz1pY88Bi0KPe9aqLz1pY88Bi0KPe9aqLz1pY88Bi0KPe9aqLwGLXA9Bi0KPe9aqLwGLXA9Bi0KPe9aqLwGLXA9/v8AAAAA/7//f/3//v//v/5//f8AgP6//f8AgP7//v/9f/9//f//P/5//f8AgP6//n/+/wAA/r/9/wCA/v/+/wEA/38AgP+//v8AAAAA/78BgPv/AAD+//9//f/+//+/AQD/fwCA/7/9f/9//f//P/5//v8AAP6/AYD7/wAA/v8BAP9/AID/vwiAAwD5//3//v8AAAAA/78BAP9/AID/vwiAAwD5//3//X//f/3//z8IgAMA+f/9//7/AAAAAP+//f8AgP7//v8IgAMA+f/9//1//3/9//8//f8AgP7//v8BAP9/AID/v/1//3/9//8//3/9//7//7/+f/3/AID+vwEA/38AgP+//v8AAAAA/7/+f/3/AID+v/5//v8AAP6//v8AAAAA/7/+f/7/AAD+vwGA+/8AAP7//f8AgP7//v/9f/9//f//PwGA+/8AAP7//3/9//7//7/9/wCA/v/+//7/AAAAAP+//3/9//7//7/9/wCA/v/+//1//3/9//8//3/9//7//7/9/wCA/v/+/wEA/38AgP+//X//f/3//z//f/3//v//vwEA/38AgP+//v8AAAAA/7//f/3//v//vw==")
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lv8ve"]
render_priority = 0
shader = ExtResource("2_bd17p")
shader_parameter/base_color = Color(1, 1, 1, 1)
shader_parameter/color_difference = 0.4
shader_parameter/speed = 4.0
shader_parameter/UV_multiplier = 1.0
shader_parameter/UV_offset = Vector2(0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cr4b7"]
resource_name = "Nommie"
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_texture = ExtResource("1_lbt5m")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_gmnmw"]
_surfaces = [{
"aabb": AABB(-0.0454102, -0.0351563, -0.0146484, 0.0878906, 0.0351663, 0.0878906),
"format": 34896613377,
"index_count": 84,
"index_data": PackedByteArray("BQAJAAgABQAEAAkABAAKAAkABAAGAAoABgALAAoABgAHAAsABwAIAAsABwAFAAgAAAAPAAIAAAAMAA8ABwAEAAUABwAGAAQAAAAJAAEAAAAIAAkAAQAKAAMAAQAJAAoAAwALAAIAAwAKAAsAAgAIAAAAAgALAAgADgAMAA0ADgAPAAwAAwANAAEAAwAOAA0AAgAOAAMAAgAPAA4AAQAMAAAAAQANAAwA"),
"name": "Nommie",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("IiLs/93dAAAiIuz/VVUAAO7u7P/d3QAA7u7s/1VVAAAAAAAAAAAAAAAAAAD//wAA//8AAAAAAAD//wAA//8AAAAA7P///wAAAADs/wAAAAD//+z/AAAAAP//7P///wAAIiJOVd3dAAAiIk5VVVUAAO7uTlVVVQAA7u5OVd3dAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_bt0fs"]
resource_name = "NommieFruit_Cube_001"
_surfaces = [{
"aabb": AABB(-0.0454102, -0.0351563, -0.0146484, 0.0878906, 0.0351663, 0.0878906),
"attribute_data": PackedByteArray("/6//v/+w/7j/sv+4/5//v/+v/7//sP+4/7L/uP+v/7//r/+//5//v/+w/7j/sv+4/5//v/+//7//sP+4/7L/uP+f/7//v//f/9//v/+v/7//r//f/6//v/+//8//z/+//8//v/+v/8//v/+//7//v/+v/7n/r/+5/7D/uv+y/7r/n/+5/9//uf+w/7r/sv+6/8//uf+w/7r/sv+6/8//uf+//7n/sP+6/7L/uv+//7n/r//D/7H/z/+f/8P/r//D/7H/w/+v/8P/n//D/7//w/+9/8P/r//D/5//w/+9/88="),
"format": 34896613399,
"index_count": 84,
"index_data": PackedByteArray("EwAgABwAEwAQACAAEgAkACEAEgAXACQAGAArACcAGAAbACsAGgAdACgAGgAVAB0AAAA2AAkAAAAsADYAGQARABQAGQAWABEAAgAiAAUAAgAfACIABgAlAA4ABgAjACUADwApAAoADwAmACkACwAeAAEACwAqAB4ANAAtADAANAA3AC0ADQAvAAQADQAzAC8ACAAyAAwACAA1ADIABwAuAAMABwAxAC4A"),
"material": SubResource("StandardMaterial3D_cr4b7"),
"name": "Nommie",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 56,
"vertex_data": PackedByteArray("IiLs/93d//8iIuz/3d3/vyIi7P/d3VTVIiLs/93d/78iIuz/VVX/fyIi7P9VVVTVIiLs/1VV//8iIuz/VVX/v+7u7P/d3f+/7u7s/93d///u7uz/3d1U1e7u7P/d3f+/7u7s/1VV/7/u7uz/VVX/f+7u7P9VVf//7u7s/1VVVNUAAAAAAAD/vwAAAAAAAFTVAAAAAAAA//8AAAAA////vwAAAAD//1TVAAAAAP///3///wAAAABU1f//AAAAAP////8AAAAA/7///wAA//9U1f//AAD///9///8AAP///78AAOz/////vwAA7P////9/AADs/////78AAOz///9U1QAA7P8AAP+/AADs/wAA//8AAOz/AABU1QAA7P8AAP/////s/wAA/////+z/AAD/////7P8AAFTV///s/wAA/7///+z/////f///7P///1TV///s/////7///+z/////vyIiTlXd3f//IiJOVd3d/78iIk5V3d3/vyIiTlVVVf9/IiJOVVVV/78iIk5VVVX/v+7uTlVVVf+/7u5OVVVV/3/u7k5VVVX/v+7uTlXd3f+/7u5OVd3d///u7k5V3d3/v/9///////9/qqqqqv9/AAD/f///qqqqqv9//7//fwAA/3////9///9U1aoq////f/9/////f////3//v1TVqir/f///VFVUVf9/////f///VFVUVf9///9UVVRV/3////9/AABUVVRV/3////9/AAD/f////3///////3+qqqqq/3////9///+qqqqq/3//v/9/////f/+/VNWqKv9/AAD/f///VNWqKv///3//fwAA/3///////3//fwAA/3///////3//fwAA/3////9///////9//3////9///////9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_gmnmw")

[sub_resource type="ArrayMesh" id="ArrayMesh_vua28"]
_surfaces = [{
"aabb": AABB(-0.0655181, -0.0521741, -0.0102803, 0.128396, 0.119248, 0.0992493),
"format": 34896613377,
"index_count": 228,
"index_data": PackedByteArray("BAABAAMABAAAAAEAAwACAAUAAwABAAIABQANAAYABQACAA0ABgAAAAQABgANAAAAAgAAAA0AAgABAAAABgADAAUABgAEAAMAAAAIAAsAAAAHAAgACwAKAAwACwAIAAoADAAJAA0ADAAKAAkADQAHAAAADQAJAAcACgAHAAkACgAIAAcADQALAAwADQAAAAsAFwAPAA4AFwAWAA8AFgARAA8AFgAYABEAGAAQABEAGAAZABAAGQAOABAAGQAXAA4AEQAOAA8AEQAQAA4AFAAdABUAFAAcAB0AEgAXABMAEgAWABcAFAAWABIAFAAYABYAFQAYABQAFQAZABgAEwAZABUAEwAXABkAHQAaABsAHQAcABoAEwAaABIAEwAbABoAFQAbABMAFQAdABsAEgAcABQAEgAaABwAIgAfAB4AIgAhAB8AIQAgAB8AIQAjACAAIwArACAAIwAkACsAJAAeACsAJAAiAB4AIAAeAB8AIAArAB4AJAAhACIAJAAjACEAHgAmACUAHgApACYAKQAoACYAKQAqACgAKgAnACgAKgArACcAKwAlACcAKwAeACUAKAAlACYAKAAnACUAKwApAB4AKwAqACkA"),
"name": "Nommie",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 44,
"vertex_data": PackedByteArray("Kily1lbJAADOJnLWCoIAAFwCctYKggAAKinOVwqCAAAqKc5XVskAAAAAzlcKggAAAADOV1bJAADHJ////V0AAMcnpdSzRQAAqwH///1dAACrAaXUs0UAAMcnIKuusAAAqwEgq66wAABLAHnW+MgAABAoc0///wAAECjb1eRgAABN13NP//8AAE3X29XkYAAAbj+aWQg1AABuP+sR44kAAO+/mlkINQAA77/rEeOJAAAQKGeGAAAAABAoAAAanwAATddnhgAAAABN1wAAGp8AAG4/FnRUVQAAbj9nLC+qAADvvxZ0VFUAAO+/ZywvqgAA1NZy1lbJAAAw2XLWCoIAAKL9ctYKggAA1NbOVwqCAADU1s5XVskAAP//zlcKggAA///OV1bJAAA32P///V0AADfYpdSzRQAAU/7///1dAABT/qXUs0UAADfYIKuusAAAU/4gq66wAACz/3nW+MgAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_1aui0"]
resource_name = "NommieFruit_Cube_002"
_surfaces = [{
"aabb": AABB(-0.0655181, -0.0521741, -0.0102803, 0.128396, 0.119248, 0.0992493),
"attribute_data": PackedByteArray("/4//r/+X/7b/k/+5/4//r/+T/6//l/+5/5P/r/+T/6//j/+v/5P/r/+P/6//k/+x/4//r/+T/7n/j/+5/4//uf+T/6//k/+5/5P/uf+P/7n/j/+5/4//uf+T/7n/k/+5/5P/r/+T/6//l/+v/5f/r/+X/6//k/+v/5P/r/+X/6//k/+w/5f/r/+T/6//l/+w/5P/tv+X/7n/k/+5/5f/uf+T/7n/k/+5/5P/uf+P/6//k/+v/5f/uf+X/7n/j/+x/6//r/+v/6//r/+v/5//r/+v/5//3/+v/7//r/+//6//v/+v/7//n//P/6//z/+v/6H/v/+y/7n/s/+4/63/v/+y/7n/s/+5/63/v/+h/7//of+//63/v/+y/7j/s/+5/63/v/+z/7j/s/+5/6H/v/+f/7n/sv+4/7L/uP/f/7j/r/+5/6//uf+y/7j/s/+4/7L/uf+y/7n/z/+4/8//uf+//7n/s/+4/7P/uf+//7n/of+8/7H/uf+t/7z/sP+5/63/vP+h/7z/of+8/63/vP+x/7j/rf+8/7D/uP+h/7z/l/+5/5P/r/+P/6//k/+5/5f/tv+P/6//j/+v/5P/r/+T/6//k/+x/4//r/+T/6//j/+5/4//r/+T/7n/k/+5/5P/r/+P/7n/j/+5/4//uf+T/7n/k/+5/5P/uf+P/7n/l/+v/5P/r/+T/6//k/+v/5f/r/+X/6//k/+w/5f/r/+T/6//k/+v/5f/sP+X/6//k/+5/5f/uf+T/7b/k/+5/5P/uf+X/7n/j/+x/5f/uf+X/7n/k/+v/4//r/+T/7k="),
"format": 34896613399,
"index_count": 228,
"index_data": PackedByteArray("EQAIAA4AEQAEAAgADQAKABQADQAGAAoAEgArABUAEgAJACsAFgAAAA8AFgAsAAAACwADAC8ACwAHAAMAFwAMABMAFwAQAAwABQAdACYABQAaAB0AJQAiACkAJQAbACIAJwAeACoAJwAhAB4ALgAYAAIALgAfABgAIwAZACAAIwAcABkALQAkACgALQABACQAUAAzADAAUABMADMATwA6ADUATwBWADoAVwA4ADsAVwBbADgAWAAxADYAWABRADEAOQAyADQAOQA3ADIARABlAEgARABiAGUAPQBTAEEAPQBNAFMARwBOAD4ARwBUAE4ASQBVAEYASQBaAFUAQABZAEoAQABSAFkAZgBdAF8AZgBkAF0AQwBeAD8AQwBhAF4ASwBgAEIASwBnAGAAPABjAEUAPABcAGMAdwBuAGkAdwB0AG4AdgByAHAAdgB7AHIAfACWAHMAfAB/AJYAfgBtAJUAfgB5AG0AcQBqAG8AcQCSAGoAfQB1AHgAfQB6AHUAaACDAIAAaACMAIMAjQCJAIQAjQCPAIkAkQCIAIsAkQCXAIgAkwCCAIcAkwBrAIIAigCBAIUAigCGAIEAlACOAGwAlACQAI4A"),
"material": SubResource("StandardMaterial3D_cr4b7"),
"name": "Nommie",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 152,
"vertex_data": PackedByteArray("Kily1lbJ9/8qKXLWVsmywCopctZWycv/Kily1lbJV9YqKXLWVsm2/yopctZWyVbgziZy1gqC///OJnLWCoI11c4mctYKgrb/XAJy1gqCqv9cAnLWCoL//1wCctYKgnLUKinOVwqCVNUqKc5XCoL//yopzlcKgrb/KinOV1bJ//8qKc5XVslU1SopzldWybb/AADOVwqCqv8AAM5XCoJU1QAAzlcKgv//AADOV1bJqv8AAM5XVsn//wAAzldWyVTVxyf///1d9v/HJ////V1588cn///9XTjgxyel1LNFxtHHJ6XUs0V588cnpdSzRS3gqwH///1dLuCrAf///V34/6sB///9XXnzqwGl1LNFLuCrAaXUs0XG0asBpdSzRXnzxycgq66w98HHJyCrrrDG0ccnIKuusErgqwEgq66wLuCrASCrrrAaw6sBIKuusMbRSwB51vjIL+BLAHnW+Miq/0sAedb4yPn/SwB51vjIyMFLAHnW+Mja/0sAedb4yKHVEChzT///GMYQKHNP//9MoBAoc0///7GfECjb1eRgGMYQKNvV5GCxnxAo29XkYP//TddzT///TKBN13NP//+xn03Xc0///xjGTdfb1eRgsZ9N19vV5GD//03X29XkYBjGbj+aWQg1TKBuP5pZCDXf6W4/mlkINfflbj+aWQg1GMZuP+sR44lM4G4/6xHjid/pbj/rEeOJ//9uP+sR44kYxu+/mlkINRjG77+aWQg1TKDvv5pZCDXf6e+/mlkINcvs77/rEeOJGMbvv+sR44nf6e+/6xHjiUzg77/rEeOJ//8QKGeGAAAYxhAoZ4YAAN/pEChnhgAANegQKGeGAAD//xAoAAAanxjGECgAABqfTKAQKAAAGp9M4BAoAAAan9/pTddnhgAAie5N12eGAADf6U3XZ4YAAP//TddnhgAAGMZN1wAAGp9MoE3XAAAan0zgTdcAABqf3+lN1wAAGp8Yxm4/FnRUVUygbj8WdFRV3+luPxZ0VFUYxm4/Zywvqt/pbj9nLC+q//9uP2csL6oYxu+/FnRUVRjG778WdFRVTKDvvxZ0VFXf6e+/ZywvqhjG779nLC+q3+nvv2csL6r//9TWctZWyW3M1NZy1lbJ3sDU1nLWVslY1NTWctZWyT6u1NZy1lbJLMPU1nLWVskmgDDZctYKgt7AMNly1gqCdtUw2XLWCoL//6L9ctYKgjzWov1y1gqC//+i/XLWCoLDwNTWzlcKgt7A1NbOVwqCVNXU1s5XCoL//9TWzldWyd7A1NbOV1bJVNXU1s5XVsklgP//zlcKglTV///OVwqC/////85XCoLDwP//zldWyVTV///OV1bJJYD//85XVsnDwDfY///9XYPMN9j///1defM32P///V09rjfYpdSzRYvMN9il1LNF//832KXUs0V581P+///9XXnzU/7///1dPa5T/v///V2LzFP+pdSzRf//U/6l1LNFefNT/qXUs0WLzDfYIKuusHbMN9ggq66w//832CCrrrDmwVP+IKuusP//U/4gq66ww8BT/iCrrrCKzLP/edb4yAvVs/951vjIPq6z/3nW+MgVwrP/edb4yCaAs/951vjIw8Cz/3nW+MiKzP7/OQDRE9vrO842ALbUdCmGwE+Atx4iMf///39i1c4qhsBOgKH/akD///9/2tW9K6oqVNX///9/hcBRgP7/OQCqKlTVhMBSgKH/akCqKlTV////f6H/akDGfxOAqipU1ZHPFgBixpw51R4TMQAA/39ixpw54B4NMfJO4J7zf3SxYsacOfJO4J4AAP9/YsacOeoTaOwAAP9/wx4cMfJO4J4BFOTsAAD/f/FO356h/2pA/v85AOcTVOwzzisAIdVNKtViq8UAAP9/////f9Viq8X///9//3862gAA/3////9/rEUpHf///3//fzrarEUpHQAA/38dNeHKViyBvqxFKR0AAP9/HTXhyv9/OtqsRSkd1WKrxQAA/38dNeHKazpc0tViq8UdNeHKAAD/f/9/OtrVYqvFHTXhyrYxFcb/fzra1WKrxQAA/38AAP9/HTXhylU9eNYdNeHK/3862qxFKR0AAP9/AAD/fx014cqsRSkdAAD/f+JK4kqsRSkd4kriSv9/OtqsRSkd1WKrxQAA/3/iSuJK1WKrxeJK4kr/fzraLcd53JyAvf7z1eYrdf/gfrITm+wMrWkcm4C+/kTViCr/f///ztScKf9///9qgbgAn4C9/qoqVNX/f///oYC9/qoqVNWzovsfqipU1f9///9qgbYAqipU1bigqiBqgbYAVcdl3GLGnDnD/6l/ZMdd3M+x//9ixpw5YsacOcz/4H+ho2VHz7H//2LGnDmho2VHPcdx3M+x//+YExDsz7H//4ETkuuho2RHhdUKK4//JX+cEyTs3amCHWqBuACho2NH")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_vua28")

[sub_resource type="ArrayMesh" id="ArrayMesh_vkbrp"]
_surfaces = [{
"aabb": AABB(-0.1875, -2.98023e-08, -0.165385, 0.375, 1e-05, 0.165395),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray("AAADAAEAAAACAAMA"),
"name": "Nommie",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("AAAAAPv/AAD//wAA+/8AAAAAAAAAAAAA//8AAAAAAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_p5h3f"]
resource_name = "NommieFruit_Plane_012"
_surfaces = [{
"aabb": AABB(-0.1875, -2.98023e-08, -0.165385, 0.375, 1e-05, 0.165395),
"attribute_data": PackedByteArray("/6//T/+//0//r/FI/7/xSA=="),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray("AAADAAEAAAACAAMA"),
"material": SubResource("StandardMaterial3D_cr4b7"),
"name": "Nommie",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("AAAAAPv//7///wAA+///vwAAAAAAAP+///8AAAAA/7////9/////f////3////9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_vkbrp")

[sub_resource type="BoxShape3D" id="BoxShape3D_oofyk"]
size = Vector3(0.087, 0.087, 0.092733)

[node name="NommieFruit" type="Node3D"]
script = ExtResource("1_wdsrn")

[node name="Model" type="Node3D" parent="."]

[node name="Outline" type="Node3D" parent="Model"]
visible = false

[node name="Outline_Top" type="MeshInstance3D" parent="Model/Outline"]
transform = Transform3D(1, 0, 0, 0, 0.631664, 0.775242, 0, -0.775242, 0.631664, 0, 0, 0.0146481)
mesh = SubResource("ArrayMesh_scq2f")
skeleton = NodePath("../../Upper_Head")
surface_material_override/0 = SubResource("ShaderMaterial_m1uq8")

[node name="Outline_Bottom" type="MeshInstance3D" parent="Model/Outline"]
transform = Transform3D(1, 0, 0, 0, 0.992546, -0.121869, 0, 0.121869, 0.992546, 0, 0, 0.0147421)
mesh = SubResource("ArrayMesh_2sky5")
skeleton = NodePath("../../Lower_Head")
surface_material_override/0 = SubResource("ShaderMaterial_lv8ve")

[node name="Lower_Head" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 0.992546, -0.121869, 0, 0.121869, 0.992546, 0, 0, 0.0147421)
mesh = SubResource("ArrayMesh_bt0fs")
skeleton = NodePath("")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Model/Lower_Head"]
remote_path = NodePath("../../Outline/Outline_Bottom")

[node name="Upper_Head" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 0.631664, 0.775242, 0, -0.775242, 0.631664, 0, 0, 0.0146481)
mesh = SubResource("ArrayMesh_1aui0")
skeleton = NodePath("")

[node name="Plane" type="MeshInstance3D" parent="Model/Upper_Head"]
transform = Transform3D(0.177449, 0, 0, 0, -0.126405, -0.124539, 0, 0.124539, -0.126405, -0.00146484, -0.0442608, 0.0603385)
mesh = SubResource("ArrayMesh_p5h3f")
skeleton = NodePath("")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Model/Upper_Head"]
remote_path = NodePath("../../Outline/Outline_Top")

[node name="NommiePotion" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2048
script = ExtResource("4_cj6x0")

[node name="Shape" type="CollisionShape3D" parent="NommiePotion"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0015564, 0.00818772, 0.0462392)
shape = SubResource("BoxShape3D_oofyk")
disabled = true

[node name="NommieWatering" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 512
script = ExtResource("5_saklj")

[node name="Shape" type="CollisionShape3D" parent="NommieWatering"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0015564, 0.00818772, 0.0462392)
shape = SubResource("BoxShape3D_oofyk")
disabled = true

[node name="NommieFeeding" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 65540
script = ExtResource("6_3u6u3")

[node name="Shape" type="CollisionShape3D" parent="NommieFeeding"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0015564, 0.00818772, 0.0462392)
shape = SubResource("BoxShape3D_oofyk")
disabled = true

[connection signal="body_entered" from="NommiePotion" to="NommiePotion" method="_on_body_entered"]
[connection signal="body_entered" from="NommieWatering" to="NommieWatering" method="_on_body_entered"]
[connection signal="body_entered" from="NommieFeeding" to="NommieFeeding" method="_on_body_entered"]
